# redPull

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
data/fixtures/: cscareerquestions.json  resumes.json
scripts/: run_daily_digest.py  run_fetch_and_notify.py
src/: __init__.py  cli.py  config.py  dedupe.py  fetch.py  reddit_client.py  scoring.py
src/drafts/: __init__.py  generator.py  prompt_templates.py
src/outputs/: __init__.py  console.py  sheets.py  slack.py
src/store/: __init__.py  db.py  models.py
